# MINTFormer

./: .gitignore  README.md
src/mintformer/: pyproject.toml
src/mintformer/mintformer/: __init__.py
src/mintformer_extra_samplers/: pyproject.toml
src/mintformer_extra_samplers/mintformer_extra_samplers/: __init__.py  coreset.py  ctgan.py  tvae.py
src/mintformer_extra_samplers/mintformer_extra_samplers/trajectory_matching/: distill.py  expert_training.py  model.py  sampler.py
src/mintformer_prep/: pyproject.toml
src/mintformer_prep/mintformer_prep/: __init__.py  dataloader.py  dataloader_fn.py  dataset.py  preprocessor.py  utils.py
src/mintformer_prep/mintformer_prep/samplers/: __init__.py  base.py  centroids.py  identity.py  random.py
src/mintformer_prep/tests/: .gitignore  test_dataloader.py
src/mintformer_tf/: pyproject.toml
src/mintformer_tf/mintformer_tf/: __init__.py  delayed_decay.py  model.py
src/mintformer_tf/mintformer_tf/blocks/: __init__.py  attention.py  embedding.py  reconstruction.py  rff.py
