[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
"scikit-learn>=1.1.0",
"numpy>=1.18.0",
"pandas>=1.0.0", 
"sdv<=1.0.0"
]

name = "mintformer-extra-samplers"
version = "0.1.0"
authors = [
  { name="Oleg Kostromin", email="kostromin97@gmail.com" },
]
description = ""
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
